{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 51,
  "lineage": "629600cd-5c4d-8bec-7c92-f27c92acdc3c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ecbdc86aa375c1a",
            "arn": "arn:aws:ec2:us-east-1:021891607194:elastic-ip/eipalloc-06ecbdc86aa375c1a",
            "association_id": "eipassoc-08431103307751fa4",
            "domain": "vpc",
            "id": "eipalloc-06ecbdc86aa375c1a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-066f4e520899cbea3",
            "private_dns": "ip-10-0-1-218.ec2.internal",
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-44-198-201-158.compute-1.amazonaws.com",
            "public_ip": "44.198.201.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "breiq-production-nat-eip"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-nat-eip",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:internet-gateway/igw-0792051a1f517b37a",
            "id": "igw-0792051a1f517b37a",
            "owner_id": "021891607194",
            "tags": {
              "Name": "breiq-production-igw"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-igw",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891607194:loadbalancer/app/breiq-production-alb/89c7ccd3bf66b15f",
            "arn_suffix": "app/breiq-production-alb/89c7ccd3bf66b15f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "breiq-production-alb-1540379926.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891607194:loadbalancer/app/breiq-production-alb/89c7ccd3bf66b15f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "breiq-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05591f0082cdf177e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0358ac7e1108f7e97"
              },
              {
                "subnet_id": "subnet-081bb93af44cdfb3f"
              }
            ],
            "subnets": [
              "subnet-0358ac7e1108f7e97",
              "subnet-081bb93af44cdfb3f"
            ],
            "tags": {
              "Name": "breiq-production-alb"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-alb",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891607194:listener/app/breiq-production-alb/89c7ccd3bf66b15f/e2caf5b7d5b5f749",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:021891607194:targetgroup/breiq-production-tg/af4ed7cb797c0cea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891607194:listener/app/breiq-production-alb/89c7ccd3bf66b15f/e2caf5b7d5b5f749",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:021891607194:loadbalancer/app/breiq-production-alb/89c7ccd3bf66b15f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:021891607194:targetgroup/breiq-production-tg/af4ed7cb797c0cea",
            "arn_suffix": "targetgroup/breiq-production-tg/af4ed7cb797c0cea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:021891607194:targetgroup/breiq-production-tg/af4ed7cb797c0cea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:021891607194:loadbalancer/app/breiq-production-alb/89c7ccd3bf66b15f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "breiq-production-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "breiq-production-tg"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-tg",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ecbdc86aa375c1a",
            "association_id": "eipassoc-08431103307751fa4",
            "connectivity_type": "public",
            "id": "nat-0b4ef4aac538cd6df",
            "network_interface_id": "eni-066f4e520899cbea3",
            "private_ip": "10.0.1.218",
            "public_ip": "44.198.201.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081bb93af44cdfb3f",
            "tags": {
              "Name": "breiq-production-nat"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-nat",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:route-table/rtb-00be8e1e97efc0255",
            "id": "rtb-00be8e1e97efc0255",
            "owner_id": "021891607194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4ef4aac538cd6df",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "breiq-production-private-rt"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-private-rt",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:route-table/rtb-0a9e1d44804b66789",
            "id": "rtb-0a9e1d44804b66789",
            "owner_id": "021891607194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0792051a1f517b37a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "breiq-production-public-rt"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-public-rt",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052eb67f044609f5d",
            "route_table_id": "rtb-00be8e1e97efc0255",
            "subnet_id": "subnet-06c45c87043595399"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af435905a6d6785d",
            "route_table_id": "rtb-00be8e1e97efc0255",
            "subnet_id": "subnet-0741673b157bc4269"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001ebf682790d247f",
            "route_table_id": "rtb-0a9e1d44804b66789",
            "subnet_id": "subnet-081bb93af44cdfb3f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0547b5858d2dd68d4",
            "route_table_id": "rtb-0a9e1d44804b66789",
            "subnet_id": "subnet-0358ac7e1108f7e97"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:security-group/sg-05591f0082cdf177e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05591f0082cdf177e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "breiq-production-alb-20250907095353424800000001",
            "name_prefix": "breiq-production-alb-",
            "owner_id": "021891607194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "breiq-production-alb-sg"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-alb-sg",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:security-group/sg-0bc1a53fef7657948",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc1a53fef7657948",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05591f0082cdf177e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "breiq-production-ecs-20250907095357172800000003",
            "name_prefix": "breiq-production-ecs-",
            "owner_id": "021891607194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "breiq-production-ecs-sg"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-ecs-sg",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:security-group/sg-0fbd9e404082e92f3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fbd9e404082e92f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc1a53fef7657948"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "breiq-production-rds-20250907095400695300000005",
            "name_prefix": "breiq-production-rds-",
            "owner_id": "021891607194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "breiq-production-rds-sg"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-rds-sg",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:security-group/sg-00e8ccafad3f16886",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00e8ccafad3f16886",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bc1a53fef7657948"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "breiq-production-redis-20250907095400695200000004",
            "name_prefix": "breiq-production-redis-",
            "owner_id": "021891607194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "breiq-production-redis-sg"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-redis-sg",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:subnet/subnet-06c45c87043595399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c45c87043595399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891607194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "breiq-production-private-1"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-private-1",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:subnet/subnet-0741673b157bc4269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0741673b157bc4269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891607194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "breiq-production-private-2"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-private-2",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:subnet/subnet-081bb93af44cdfb3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081bb93af44cdfb3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891607194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "breiq-production-public-1"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-public-1",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:subnet/subnet-0358ac7e1108f7e97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0358ac7e1108f7e97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891607194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "breiq-production-public-2"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-public-2",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            },
            "vpc_id": "vpc-0a1cba98169422e23"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891607194:vpc/vpc-0a1cba98169422e23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a063335a04a9a11",
            "default_route_table_id": "rtb-099209cb90fe21f3e",
            "default_security_group_id": "sg-0db3702d65876caaf",
            "dhcp_options_id": "dopt-009f802b3e96d31b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1cba98169422e23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099209cb90fe21f3e",
            "owner_id": "021891607194",
            "tags": {
              "Name": "breiq-production-vpc"
            },
            "tags_all": {
              "Account": "personal",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "breiq-production-vpc",
              "Project": "breiq",
              "Purpose": "breakdancing-mobile-platform"
            }
          }
        }
      ]
    }
  ]
}